welcome.lessons.welcome.loopfor.LoopCourse.scala.code
for (tour <- 0 to 10){
	for( chocapic <- 1 to 3 ){
while(!estFaceMur()){
	for( chocapic <- 1 to 3 )
{avance();
}}
gauche();
}
